Internal change
PiperOrigin-RevId: 625268552